# gaclen

./: .gitignore  Cargo.toml  bugs.md  changelog.md  diary.md  lessons.md  licence-apache  licence-mit  readme.md  release-checklist.md
examples/: triangle.rs
examples/quad/: main.rs  shaders.rs
examples/shadow/: albedo.frag  albedo.vert  geometry.rs  main.rs  shaders.rs  shadow.vert
examples/triangle/: main.rs  shader.vert  shaders.rs
gaclen/: Cargo.toml
gaclen/examples/cube/: geometry.rs  main.rs  shader.frag  shader.vert  shaders.rs
gaclen/examples/phong_cube/: geometry.rs  main.rs  shader.frag  shader.vert  shaders.rs
gaclen/examples/quad/: main.rs  shader.vert  shaders.rs
gaclen/examples/scene/: graphics.rs  main.rs  scene.rs
gaclen/examples/scene/graphics/: shaders.rs  shadow.vert
gaclen/examples/shadow/: albedo.frag  albedo.vert  geometry.rs  main.rs  shaders.rs  shadow.frag  shadow.vert
gaclen/src/: graphics.rs  lib.rs  window.rs
gaclen/src/graphics/: buffer.rs  context.rs  device.rs  frame.rs  image.rs  pass.rs  swapchain.rs
gaclen/src/graphics/pass/: builder.rs  graphical_pass.rs
gaclen_shader/: Cargo.toml
gaclen_shader/src/: codegen.rs  descriptor_sets.rs  entry_point.rs  enums.rs  lib.rs  parse.rs  spec_consts.rs  spirv_search.rs  structs.rs
src/: graphics.rs  lib.rs  main.rs  window.rs
src/graphics/: buffer.rs  context.rs  device.rs  mod.rs  pass.rs  pipeline.rs  shader.rs
