[package]
name = "gaclen"
version = "0.1.0"
authors = ["Grigory 'Griffone' Glukhov <thegriffones@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.19.*" # window handling
vulkano = "0.14.*" # vulkan library in Rust
vulkano-win = "0.14.*" # vulkan-winit linkage
vulkano-shaders = "0.14.*" # inline shader library
cgmath = "0.17.*" # linear algebra library