[package]
name = "gaclen_shader"
version = "0.0.11"
authors = ["Grigory 'Griffone' Glukhov <thegriffones@gmail.com>"]
edition = "2018"

description = "Tweaked re-export of vulkano_shader! procedural macro."
keywords = ["gaclen", "vulkan", "macro"]
categories = ["graphics", "rust-patterns"]
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
shaderc = "0.6"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
